--- a/StaticProgramAnalyzer/StaticProgramAnalyzer.csproj
+++ b/StaticProgramAnalyzer/StaticProgramAnalyzer.csproj
@@ -2,7 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
+	  <LangVersion>9.0</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Parsing\Tokens\" />
+  </ItemGroup>
 
 </Project>
